[package]
name = "easy_excel"
version = "0.1.0"
edition = "2021"
authors = ["shuisuinian"]
description = "easy read and write excel"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = { version = "1.0.21", features = ["proc-macro"] }
syn = "1.0.103"
umya-spreadsheet = "0.8.3"
